# rlnc

./: Cargo.toml  Makefile  README.md  tarpaulin-report.html
.github/workflows/: test_ci.yml
benches/: full_rlnc_decoder.rs  full_rlnc_encoder.rs  full_rlnc_recoder.rs
examples/: full_rlnc.rs
src/: decoder.rs  encoder.rs  errors.rs  gf256.rs  lib.rs  recoder.rs  tests.rs
src/common/: errors.rs  gf256.rs  macros.rs  mod.rs  simd.rs  simd_mul_table.rs
src/full/: consts.rs  decoder.rs  decoder_matrix.rs  encoder.rs  mod.rs  recoder.rs  tests.rs
