[package]
name = "rlnc"
version = "0.6.0"
edition = "2024"
resolver = "3"
rust-version = "1.85.0"
authors = ["Anjan Roy <hello@itzmeanjan.in>"]
description = "Random Linear Network Coding"
readme = "README.md"
repository = "https://github.com/itzmeanjan/rlnc.git"
license = "BSD-3-Clause"
keywords = [
    "rlnc",
    "network-coding",
    "erasure-coding",
    "fountain-codes",
    "data-transmission",
]
categories = ["network-programming", "encoding", "algorithms"]


[dependencies]
rand = "=0.9.1"
rayon = { version = "=1.10.0", optional = true }

[dev-dependencies]
divan = "=0.1.21"

[features]
parallel = ["dep:rayon"]

[[bench]]
name = "full_rlnc_encoder"
harness = false

[[bench]]
name = "full_rlnc_recoder"
harness = false

[[bench]]
name = "full_rlnc_decoder"
harness = false

[profile.optimized]
inherits = "release"
codegen-units = 1
lto = true
panic = "abort"
opt-level = 3

[profile.test-release]
inherits = "release"
debug = true
debug-assertions = true
overflow-checks = true
opt-level = 3
